--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: Estedad;
+  src: url("./assets/fonts/Estedad-Regular.ttf") format("ttf"),
+    url("./assets/fonts/Estedad-Regular.woff2") format("woff2");
+}
+
+@layer base {
+  html {
+    font-family: "Estedad";
+  }
+}
