feat: create comments folder in assets/Images and add comments images (I didn`t use urls for mapping because of same prev problem in branches cards).
create ComentsCard and CommentsSlider Components and design them

--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -64,3 +64,11 @@
     display: none;
   }
 }
+
+/* Comments Slider Costum Styling Start */
+
+.comments-slider .swiper-pagination-bullet {}
+
+.comments-slider .swiper-pagination-bullet-active {}
+
+/* Comments Slider Costum Styling End */
