--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -66,9 +66,18 @@
 }
 
 /* Comments Slider Costum Styling Start */
+.comments-slider .swiper-pagination{
+  position: initial;
+}
 
-.comments-slider .swiper-pagination-bullet {}
+.comments-slider .swiper-pagination-bullet {
+  scale: 0.9;
+  margin: 1px;
+}
 
-.comments-slider .swiper-pagination-bullet-active {}
+.comments-slider .swiper-pagination-bullet-active {
+  background: #417F56;
+  scale: 1.3;
+}
 
 /* Comments Slider Costum Styling End */
