feat: add navigation buttons for CommentsSlider

--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -80,4 +80,13 @@
   scale: 1.3;
 }
 
+.comments-slider .swiper-button-next:after {
+  color: #417F56;
+  font-size: 32px !important;
+}
+.comments-slider .swiper-button-prev:after {
+  color: #417F56;
+  font-size: 32px !important;
+}
+
 /* Comments Slider Costum Styling End */
