--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -58,35 +58,43 @@
 }
 /* Product Slider Costum Styling End */
 
+/* Comments Slider Costum Styling Start */
+.comments-slider .swiper-pagination{
+  position: initial;
+}
+.comments-slider .swiper-pagination-bullet {
+  scale: 0.9;
+  margin: 1px;
+}
+.comments-slider .swiper-pagination-bullet-active {
+  background: #417F56;
+  scale: 1.3;
+}
+.comments-slider .swiper-button-next:after {
+  color: #353535;
+  font-size: 16px !important;
+  padding: 4px 6px;
+  z-index: 10;
+  border-radius: 4px;
+  border: 1px solid #cbcbcb;
+  background: #fff;
+}
+.comments-slider .swiper-button-prev:after {
+  color: #353535;
+  font-size: 16px !important;
+  padding: 4px 6px;
+  z-index: 10;
+  border-radius: 4px;
+  border: 1px solid #cbcbcb;
+  background: #fff;
+}
+
+/* Comments Slider Costum Styling End */
+
+
 @media screen and (max-width: 662px) {
   .swiper-button-next:after,
   .swiper-button-prev:after {
     display: none;
   }
 }
-
-/* Comments Slider Costum Styling Start */
-.comments-slider .swiper-pagination{
-  position: initial;
-}
-
-.comments-slider .swiper-pagination-bullet {
-  scale: 0.9;
-  margin: 1px;
-}
-
-.comments-slider .swiper-pagination-bullet-active {
-  background: #417F56;
-  scale: 1.3;
-}
-
-.comments-slider .swiper-button-next:after {
-  color: #417F56;
-  font-size: 32px !important;
-}
-.comments-slider .swiper-button-prev:after {
-  color: #417F56;
-  font-size: 32px !important;
-}
-
-/* Comments Slider Costum Styling End */
