--- a/front-end/src/global.css
+++ b/front-end/src/global.css
@@ -15,14 +15,12 @@
 }
 
 /* Hero Slider Costum Styling Start */
-.hero-slider .swiper-button-next:after {
-  color: white;
-  font-size: 32px !important;
-}
+.hero-slider .swiper-button-next:after,
 .hero-slider .swiper-button-prev:after {
   color: white;
   font-size: 32px !important;
 }
+
 .hero-slider .swiper-pagination {
   background-image: url("../src/assets/images/heroSlider/nav-bg-slider.png");
   background-position: center;
@@ -37,8 +35,14 @@
 }
 /* Hero Slider Costum Styling End */
 
-/* Product Slider Costum Styling Start */
-.product-slider .swiper-button-next:after {
+/* Sliderrs Costum buttons Styling Start */
+.product-slider .swiper-button-next:after,
+.product-slider .swiper-button-prev:after,
+ .breadcrumb-slider .swiper-button-next:after,
+.breadcrumb-slider .swiper-button-prev:after,
+ .comments-slider .swiper-button-next:after,
+.comments-slider .swiper-button-prev:after
+{
   color: #353535;
   font-size: 16px !important;
   padding: 4px 6px;
@@ -47,16 +51,7 @@
   border: 1px solid #cbcbcb;
   background: #fff;
 }
-.product-slider .swiper-button-prev:after {
-  color: #353535;
-  font-size: 16px !important;
-  padding: 4px 6px;
-  z-index: 10;
-  border-radius: 4px;
-  border: 1px solid #cbcbcb;
-  background: #fff;
-}
-/* Product Slider Costum Styling End */
+/* Sliderrs Costum buttons Styling End */
 
 /* Comments Slider Costum Styling Start */
 .comments-slider .swiper-pagination{
@@ -70,26 +65,13 @@
   background: #417F56;
   scale: 1.3;
 }
-.comments-slider .swiper-button-next:after {
-  color: #353535;
-  font-size: 16px !important;
-  padding: 4px 6px;
-  z-index: 10;
-  border-radius: 4px;
-  border: 1px solid #cbcbcb;
-  background: #fff;
-}
-.comments-slider .swiper-button-prev:after {
-  color: #353535;
-  font-size: 16px !important;
-  padding: 4px 6px;
-  z-index: 10;
-  border-radius: 4px;
-  border: 1px solid #cbcbcb;
-  background: #fff;
-}
-
 /* Comments Slider Costum Styling End */
+
+/* breadcrumb slider Costum Styling End */
+.breadcrumb-slider .swiper-slide {
+  width: max-content;
+}
+/* breadcrumb slider Costum Styling End */
 
 
 @media screen and (max-width: 662px) {
